updated the notebook

--- a/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -56,22 +56,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"debut = time.time()\n",
+    "debut = time.time()\n",
     "\n",
     "offers_graded_from_0_to_5 = get_dataframe_of_all_the_interactions_from_0_to_5(connection)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offers_graded_from_0_to_5 = pd.read_csv('offers_graded_from_0_to_5.csv', sep = '\\t') "
+    "print(temps)"
    ]
   },
   {
@@ -535,15 +526,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offers_recommended_to_a_user.to_csv('../offers_recommended_to_a_user.csv', index=False, sep = '\\t') "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -967,9 +949,7 @@
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)\n",
-    "\n",
-    "predictions_of_the_grades = pd.read_csv('predictions_of_the_grades.csv', sep = '\\t') "
+    "print(temps)"
    ]
   },
   {
