added notebook for the correlation between types

--- a/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -23,7 +23,7 @@
     "from passculture_recommendations.features.functions_over_the_types import create_dataframe_of_the_name_of_all_the_types\n",
     "from passculture_recommendations.features.functions_over_the_types import replace_dot_with_a_dash_in_the_column_type\n",
     "from passculture_recommendations.diversification.algorithm_swap_using_the_confusion_matrix import add_one_offer_that_diversifies_the_recommended_offers\n",
-    "\n",
+    "from passculture_recommendations.diversification.correlation_between_types_based_on_booked_offers import get_correlation_between_types_based_on_booked_offers\n",
     "\n",
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -540,10 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarity_matrix = pd.read_csv('../matrix_type_type_correlation_physique_numerique.csv', sep = '\\t') \n",
-    "similarity_matrix.index = similarity_matrix['type']\n",
-    "del similarity_matrix['type']\n",
-    "similarity_matrix"
+    "similarity_matrix = get_correlation_between_types_based_on_booked_offers(connection)\n"
    ]
   },
   {
