--- a/notebooks/personalisation_and_diversification_of_recommended_offers/correlation_between_types_based_on_booked_offers.ipynb
+++ b/notebooks/personalisation_and_diversification_of_recommended_offers/correlation_between_types_based_on_booked_offers.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "import time\n",
@@ -39,12 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "booked_offers_without_support = pd.read_sql_query('SELECT \"user\".id, offer.type \\\n",
+    "booked_offers_without_support = pd.read_sql_query(\"\"\"SELECT \"user\".id, offer.type \\\n",
     "                       FROM \"booking\" \\\n",
     "                       INNER JOIN \"user\" ON \"user\".id=booking.\"userId\" \\\n",
     "                       INNER JOIN stock ON booking.\"stockId\"=stock.id \\\n",
     "                       INNER JOIN offer ON offer.id=stock.\"offerId\" \\\n",
-    "                       ORDER BY \"user\".id', connection)\n",
+    "                       WHERE offer.type!='ThingType.ACTIVATION'\n",
+    "                       ORDER BY \"user\".id \"\"\", connection)\n",
     "booked_offers_without_support"
    ]
   },
@@ -56,7 +56,7 @@
    "source": [
     "matrix_user_type = pd.DataFrame(index=booked_offers_without_support['id'].unique(), \\\n",
     "                         columns=booked_offers_without_support['type'].unique())\n",
-    "del matrix_user_type['ThingType.ACTIVATION']\n",
+    "\n",
     "matrix_user_type"
    ]
   },
@@ -263,7 +263,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "import time\n",
@@ -664,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
