change the titles in english

--- a/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distribution des notes par type et par isVirtual"
+    "### Distribution of the rates by types and by isVirtual"
    ]
   },
   {
@@ -221,10 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prédictions\n",
-    "### Pour chaque couple (user, offer) du testset, on prédit une note entre 0 et 1\n",
-    "- Plus le score est proche de 1, plus l'utilisateur est susceptible d'être intéréssé par l'offre\n",
-    "- On utilise l'algorithme SVD pour faire ces prédictions"
+    "# Predictions using SVD "
    ]
   },
   {
@@ -271,9 +268,9 @@
     "               y = data.values,\n",
     "               )\n",
     "\n",
-    "layout = dict(title = 'Prédiction : Distribution de {} notes'.format(predictions_of_the_grades.shape[0]),\n",
-    "              xaxis = dict(title = 'Notes'),\n",
-    "              yaxis = dict(title = \"Nombre de notes\"))\n",
+    "layout = dict(title = 'Prediction : Distribution of {} rates'.format(predictions_of_the_grades.shape[0]),\n",
+    "              xaxis = dict(title = 'Rates'),\n",
+    "              yaxis = dict(title = \"Number of rates\"))\n",
     "\n",
     "fig = go.Figure(data=[trace], layout=layout)\n",
     "fig.show()"
@@ -319,26 +316,26 @@
     "fig.add_trace(\n",
     "    go.Bar(x=number_of_rates_per_type_in_the_predictions['type'], \n",
     "               y=number_of_rates_per_type_in_the_predictions['total'],\n",
-    "               name=\"Nombre de notes\"),\n",
+    "               name=\"Number of rates\"),\n",
     "    secondary_y=False,\n",
     ")\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Scatter(x=number_of_rates_per_type_in_the_predictions['type'],\n",
     "               y=number_of_rates_per_type_in_the_predictions['pourcentage_note1'],\n",
-    "               name=\"%tage note 1\"),\n",
+    "               name=\"%tage rate 1\"),\n",
     "    secondary_y=True,\n",
     ")\n",
     "\n",
     "#On ajoute le titre\n",
-    "fig.update_layout(title_text='Distribution des notes par type dans la prédiction')\n",
+    "fig.update_layout(title_text='Distribution of rates by type in the prediction')\n",
     "\n",
     "#Titre de l'axe x \n",
-    "fig.update_xaxes(title_text=\"types\")\n",
+    "fig.update_xaxes(title_text=\"Types\")\n",
     "\n",
     "#Titre des axes y \n",
-    "fig.update_yaxes(title_text=\"Nombre de notes\", secondary_y=False)\n",
-    "fig.update_yaxes(title_text=\"Pourcentage dans la note 1\", secondary_y=True)\n",
+    "fig.update_yaxes(title_text=\"Number of rates\", secondary_y=False)\n",
+    "fig.update_yaxes(title_text=\"Percentage in rate 1\", secondary_y=True)\n",
     "\n",
     "fig.show()"
    ]
@@ -364,26 +361,26 @@
     "fig.add_trace(\n",
     "    go.Bar(x=number_of_rates_per_isVirtual_in_the_predictions['isVirtual'], \n",
     "               y=number_of_rates_per_isVirtual_in_the_predictions['total'],\n",
-    "               name=\"Nombre de notes\"),\n",
+    "               name=\"Number of rates\"),\n",
     "    secondary_y=False,\n",
     ")\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Scatter(x=number_of_rates_per_isVirtual_in_the_predictions['isVirtual'],\n",
     "               y=number_of_rates_per_isVirtual_in_the_predictions['pourcentage_note1'],\n",
-    "               name=\"%tage note 1\"),\n",
+    "               name=\"%tage rate 1\"),\n",
     "    secondary_y=True,\n",
     ")\n",
     "\n",
     "#On ajoute le titre\n",
-    "fig.update_layout(title_text='Distribution des notes par isVirtual dans la prédiction')\n",
+    "fig.update_layout(title_text='Distribution of rates by isVirtual in the prediction')\n",
     "\n",
     "#Titre de l'axe x \n",
     "fig.update_xaxes(title_text=\"Types\")\n",
     "\n",
     "#Titre des axes y \n",
-    "fig.update_yaxes(title_text=\"Nombre de notes\", secondary_y=False)\n",
-    "fig.update_yaxes(title_text=\"Pourcentage dans la note 1\", secondary_y=True)\n",
+    "fig.update_yaxes(title_text=\"Number of rates\", secondary_y=False)\n",
+    "fig.update_yaxes(title_text=\"Percentage in rate 1\", secondary_y=True)\n",
     "\n",
     "fig.show()"
    ]
@@ -480,7 +477,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recommendable_offers_to_all_the_users = get_all_the_recommendable_offers(connection)"
+    "debut = time.time()\n",
+    "\n",
+    "recommendable_offers_to_all_the_users = get_all_the_recommendable_offers(connection)\n",
+    "\n",
+    "fin = time.time()\n",
+    "temps = (fin - debut)/60\n",
+    "print(temps)"
    ]
   },
   {
@@ -496,7 +499,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recommendable_offers_to_all_the_users_in_bretagne = get_all_the_recommendable_offers_from_bretagne(recommendable_offers_to_all_the_users)"
+    "debut = time.time()\n",
+    "\n",
+    "recommendable_offers_to_all_the_users_in_bretagne = get_all_the_recommendable_offers_from_bretagne(recommendable_offers_to_all_the_users)\n",
+    "\n",
+    "fin = time.time()\n",
+    "temps = (fin - debut)/60\n",
+    "print(temps)"
    ]
   },
   {
@@ -512,8 +521,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "debut = time.time()\n",
+    "\n",
     "user_id = 25549\n",
-    "offers_recommended_to_a_user = get_the_prediction_for_one_user(user_id, recommendable_offers_to_all_the_users, algo)\n"
+    "offers_recommended_to_a_user = get_the_prediction_for_one_user(user_id, recommendable_offers_to_all_the_users, algo)\n",
+    "\n",
+    "fin = time.time()\n",
+    "temps = (fin - debut)/60\n",
+    "print(temps)"
    ]
   },
   {
@@ -522,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offers_recommended_to_a_user"
+    "offers_recommended_to_a_user.head(5)"
    ]
   },
   {
@@ -530,8 +545,7 @@
    "metadata": {},
    "source": [
     "# Algorithme Swap\n",
-    "## Diversification à travers tous les types\n",
-    "- Distance entre les offres - Réservation "
+    "## Diversification according to the types "
    ]
   },
   {
@@ -540,51 +554,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarity_matrix = get_correlation_between_types_based_on_booked_offers(connection)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"SELECT id as offer_id FROM discovery_view\"\"\"\n",
-    "discovery_view = get_a_df_from_sql_query(query, connection)\n",
+    "debut = time.time()\n",
     "\n",
-    "query = \"\"\" SELECT \"offer\".id as offer_id, url FROM \"offer\" \"\"\"\n",
+    "similarity_matrix = get_correlation_between_types_based_on_booked_offers(connection)\n",
     "\n",
-    "offers_with_url = get_a_df_from_sql_query(query, connection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions_of_the_grades = predictions_of_the_grades.merge(discovery_view, left_on='offer_id', right_on='offer_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " predictions_of_the_grades = predictions_of_the_grades.merge(offers_with_url, left_on='offer_id', right_on='offer_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offers_recommended_to_a_user = predictions_of_the_grades[predictions_of_the_grades['user_id']==63068]\n",
-    "offers_recommended_to_a_user = add_support_in_type(offers_recommended_to_a_user)\n",
-    "offers_recommended_to_a_user = offers_recommended_to_a_user.sort_values(by=['score'], ascending=False)\n",
-    "offers_recommended_to_a_user"
+    "fin = time.time()\n",
+    "temps = (fin - debut)/60\n",
+    "print(temps)"
    ]
   },
   {
@@ -639,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Moyenne des scores après chaque échange"
+    "### Average scores after each exchange of offers"
    ]
   },
   {
@@ -663,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Similarité de l'ensemble après chaque échange "
+    "### Similarity of the set after each exchange "
    ]
   },
   {
@@ -687,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Similarité de l'ensemble avec le best et worst case"
+    "### Similarity of the set with the best/worst cases"
    ]
   },
   {
@@ -745,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distribution des types après la diversification "
+    "### Distribution of types after diversification "
    ]
   },
   {
@@ -773,8 +749,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diversification au sein d'un même type\n",
-    "### Distribution des types dans la table discovery_view pour voir au sein de quel type on va diversifier "
+    "## Diversification within the same type\n",
+    "### Distribution of types in discovery_view to see within which type we diversify"
    ]
   },
   {
@@ -812,7 +788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On récupère la colonne ExtraData de la table offer"
+    "### Get column ExtraData in offer"
    ]
   },
   {
@@ -830,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Diversification au sein du type LIVRE_EDITION"
+    "### Diversification within the type LIVRE_EDITION"
    ]
   },
   {
@@ -868,7 +844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On diversifie en fonction de la caractéristique \"rayon\""
+    "### We diversify according to \"rayon\""
    ]
   },
   {
@@ -931,7 +907,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diversification des offres en fonction du TF-IDF de leur description"
+    "## Diversification of the offers using the  TF-IDF of their description"
    ]
   },
   {
@@ -1007,7 +983,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On récupère la description des offres "
+    "### Get the description of the offers"
    ]
   },
   {
@@ -1054,7 +1030,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On fait K échanges pour diversifier l'ensemble "
+    "###  K exchanges to diversify the set "
    ]
   },
   {
@@ -1070,7 +1046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On regarde le TF-IDF des mots de la descriptions des offres que l'on recommande à un utilisateur "
+    "### See the TF-IDF of the words of the descriptions des offres que l'on recommande à un utilisateur "
    ]
   },
   {
