last version of the notebook collaborative_filtering_model_based_SVD_binary_package.ipynb

--- a/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -24,6 +24,17 @@
     "from passculture_recommendations.features.functions_over_the_types import replace_dot_with_a_dash_in_the_column_type\n",
     "from passculture_recommendations.diversification.algorithm_swap_using_the_confusion_matrix import add_one_offer_that_diversifies_the_recommended_offers\n",
     "from passculture_recommendations.diversification.correlation_between_types_based_on_booked_offers import get_correlation_between_types_based_on_booked_offers\n",
+    "from passculture_recommendations.diversification.similarity_using_the_confusion_matrix import compute_similarity_of_the_set\n",
+    "from passculture_recommendations.features.number_of_offer_per_category import compute_number_of_offer_per_category\n",
+    "from passculture_recommendations.diversification.worst_best_case_in_the_diversification_per_type import worst_case_in_the_diversification_per_type\n",
+    "from passculture_recommendations.diversification.worst_best_case_in_the_diversification_per_type import best_case_in_the_diversification_per_type\n",
+    "from passculture_recommendations.features.animation_of_the_distribution_of_the_types import make_bar_chart\n",
+    "from passculture_recommendations.features.extradata_of_the_type_livre_edition import get_feature_of_the_book\n",
+    "from passculture_recommendations.features.extradata_of_the_type_livre_edition import add_columns_of_the_features_in_df_extradata_livre\n",
+    "from passculture_recommendations.features.tfidf import get_cosinus_similarity_using_the_tfidf\n",
+    "from passculture_recommendations.features.tfidf import get_the_most_similar\n",
+    "from passculture_recommendations.diversification.algorithm_swap_using_the_description import add_x_offers_that_diversifies_the_recommended_offers_using_the_description\n",
+    "from passculture_recommendations.features.tfidf import get_the_words_that_describe\n",
     "\n",
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -541,6 +552,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"SELECT id as offer_id, type  FROM offer\"\"\"\n",
+    "offers = get_a_df_from_sql_query(query, connection)\n",
+    "offers.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offers_recommended_to_a_user = offers_recommended_to_a_user.merge(offers, left_on='offer_id', right_on='offer_id')\n",
+    "offers_recommended_to_a_user.head(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -569,7 +601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pdb"
+    "#%pdb"
    ]
   },
   {
@@ -602,7 +634,7 @@
     "\n",
     "    similarity_of_the_set.append(compute_similarity_of_the_set(number_of_offers_per_type, similarity_matrix, number_of_exchanges)[0])\n",
     "\n",
-    "    number_of_offers_per_type_for_this_iteration = number_of_offer_per_category.compute_number_of_offer_per_category(\n",
+    "    number_of_offers_per_type_for_this_iteration = compute_number_of_offer_per_category(\n",
     "                most_relevant_offers_recommended_to_a_user, 'type', i)\n",
     "    number_of_offers_per_type_for_this_iteration = replace_dot_with_a_dash_in_the_column_type(\n",
     "                number_of_offers_per_type_for_this_iteration)\n",
@@ -672,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.arange(70)\n",
+    "x = np.arange(number_of_exchanges)\n",
     "y = similarity_of_the_set\n",
     "\n",
     "similarity_of_the_set_in_the_worst_case = worst_case_in_the_diversification_per_type(number_of_exchanges)\n",
@@ -730,19 +762,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_offers_per_type_at_each_iteration.dropna(axis=0, how='all', subset = range(0, 70), inplace=True)\n",
+    "number_of_offers_per_type_at_each_iteration.dropna(axis=0, how='all', subset = range(0, number_of_exchanges), inplace=True)\n",
     "number_of_offers_per_type_at_each_iteration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data = pd.read_csv('number_of_offers_per_type_in_the_diversification_per_type.csv', sep = '\\t')\n",
-    "data = number_of_offers_per_type_at_each_iteration\n",
-    "make_bar_chart(data, \"type\", \"0\", \"69\",title = \"Distribution of the types after each exchange\", frame_rate = 1)"
    ]
   },
   {
@@ -760,8 +781,8 @@
    "outputs": [],
    "source": [
     "query = \"\"\"SELECT type  FROM discovery_view\"\"\"\n",
-    "discovery_view = feature_engineering.get_a_df_from_sql_query(query, connection)\n",
-    "discovery_view"
+    "discovery_view = get_a_df_from_sql_query(query, connection)\n",
+    "discovery_view.head(5)"
    ]
   },
   {
@@ -798,8 +819,8 @@
    "outputs": [],
    "source": [
     "query = \"\"\"SELECT type, \"extraData\"  FROM offer \"\"\"\n",
-    "extradata = feature_engineering.get_a_df_from_sql_query(query, connection)\n",
-    "extradata"
+    "extradata = get_a_df_from_sql_query(query, connection)\n",
+    "extradata.head(5)"
    ]
   },
   {
@@ -816,8 +837,8 @@
    "outputs": [],
    "source": [
     "query = \"\"\"SELECT id, type, \"extraData\" FROM offer WHERE type = 'ThingType.LIVRE_EDITION' \"\"\"\n",
-    "extradata_livres = feature_engineering.get_a_df_from_sql_query(query, connection)\n",
-    "extradata_livres"
+    "extradata_livres = get_a_df_from_sql_query(query, connection)\n",
+    "extradata_livres.head(5)"
    ]
   },
   {
@@ -837,7 +858,7 @@
    "outputs": [],
    "source": [
     "extradata_livres = add_columns_of_the_features_in_df_extradata_livre(extradata_livres, feature_of_the_book)\n",
-    "extradata_livres"
+    "extradata_livres.head(5)"
    ]
   },
   {
@@ -881,7 +902,7 @@
     "data_in_rayon = pd.DataFrame(extradata_livres['rayon'].unique(), columns=['rayon'])\n",
     "data_in_rayon.dropna(inplace=True)\n",
     "data_in_rayon.reset_index(drop=True, inplace=True)\n",
-    "data_in_rayon"
+    "data_in_rayon.head(5)"
    ]
   },
   {
@@ -890,7 +911,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosinus_similarity = get_cosinus_similarity_using_the_tfidf(data_in_rayon['rayon'])\n"
+    "cosinus_similarity = get_cosinus_similarity_using_the_tfidf(data_in_rayon['rayon'])"
    ]
   },
   {
@@ -918,65 +939,12 @@
    "source": [
     "debut = time.time()\n",
     "\n",
-    "predictions_of_the_grades = svd.svd_for_the_recommendation(offers_graded_from_0_to_1)\n",
+    "user_id = 25549\n",
+    "offers_recommended_to_a_user = get_the_prediction_for_one_user(user_id, recommendable_offers_to_all_the_users, algo)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
     "print(temps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#On recupere les types des offres et la colonne isVirtual\n",
-    "predictions_of_the_grades = predictions_of_the_grades.merge(offers_graded_from_0_to_1, left_on=['user_id', 'offer_id','note'],\\\n",
-    "                                                            right_on=['user_id', 'offer_id','note'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"SELECT id as offer_id FROM discovery_view\"\"\"\n",
-    "discovery_view = feature_engineering.get_a_df_from_sql_query(query, connection)\n",
-    "\n",
-    "query = \"\"\" SELECT \"offer\".id as offer_id, url FROM \"offer\" \"\"\"\n",
-    "offers_with_url = feature_engineering.get_a_df_from_sql_query(query, connection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions_of_the_grades = predictions_of_the_grades.merge(discovery_view, left_on='offer_id', right_on='offer_id')\n",
-    "predictions_of_the_grades = predictions_of_the_grades.merge(offers_with_url, left_on='offer_id', right_on='offer_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offers_recommended_to_a_user = predictions_of_the_grades[predictions_of_the_grades['user_id']==63068]\n",
-    "offers_recommended_to_a_user = offers_recommended_to_a_user.sort_values(by=['score'], ascending=False)\n",
-    "offers_recommended_to_a_user = add_support.add_support_in_type(offers_recommended_to_a_user)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offers_recommended_to_a_user"
    ]
   },
   {
@@ -992,8 +960,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"SELECT id as offer_id, description FROM offer \"\"\"\n",
-    "all_the_offers = feature_engineering.get_a_df_from_sql_query(query, connection)"
+    "query = \"\"\"SELECT id as offer_id, description, url, type  FROM offer\"\"\"\n",
+    "offers_with_description = get_a_df_from_sql_query(query, connection)\n",
+    "offers_with_description.head(5)"
    ]
   },
   {
@@ -1002,8 +971,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offers_recommended_to_a_user = offers_recommended_to_a_user.merge(all_the_offers, right_on=\"offer_id\", left_on=\"offer_id\")\n",
-    "offers_recommended_to_a_user"
+    "offers_recommended_to_a_user = offers_recommended_to_a_user.merge(offers_with_description, right_on=['offer_id'], left_on=['offer_id'])\n",
+    "offers_recommended_to_a_user.head(5)"
    ]
   },
   {
@@ -1014,7 +983,7 @@
    "source": [
     "offers_recommended_to_a_user.dropna(subset=['description'], inplace=True) \n",
     "offers_recommended_to_a_user.reset_index(drop=True, inplace=True)\n",
-    "offers_recommended_to_a_user"
+    "offers_recommended_to_a_user.head(5)"
    ]
   },
   {
@@ -1039,14 +1008,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "most_relevant_offers_recommended_to_a_user, number_of_offers_per_type, sum_of_the_score, similarity_of_the_set = add_x_offers_that_diversifies_the_recommended_offers_using_the_description(offers_recommended_to_a_user, cosinus_similarity)\n"
+    "#%pdb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_relevant_offers_recommended_to_a_user, number_of_offers_per_type, sum_of_the_score, similarity_of_the_set = add_x_offers_that_diversifies_the_recommended_offers_using_the_description(30, offers_recommended_to_a_user, cosinus_similarity)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### See the TF-IDF of the words of the descriptions des offres que l'on recommande à un utilisateur "
+    "### See the TF-IDF of the words of the descriptions "
    ]
   },
   {
@@ -1058,13 +1036,6 @@
     "tfidf_of_the_offers = get_the_words_that_describe(most_relevant_offers_recommended_to_a_user, 'description')\n",
     "tfidf_of_the_offers"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
