last version of 2 notebooks

--- a/notebooks/personalisation_and_diversification_of_recommended_offers/collaborative_filtering_model_based_SVD_binary.ipynb
+++ b/notebooks/personalisation_and_diversification_of_recommended_offers/collaborative_filtering_model_based_SVD_binary.ipynb
@@ -58,13 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "debut = time.time()\n",
-    "\n",
-    "offers_graded_from_0_to_5 = pd.read_csv('offers_graded_from_0_to_5.csv', sep = '\\t') \n",
-    "\n",
-    "fin = time.time()\n",
-    "temps = (fin - debut)/60\n",
-    "print(temps)"
+    "offers_graded_from_0_to_5 = pd.read_csv('offers_graded_from_0_to_5.csv', sep = '\\t') "
    ]
   },
   {
@@ -169,7 +163,7 @@
     "fig.add_trace(\n",
     "    go.Bar(x=number_of_rates_per_type['type'], \n",
     "           y=number_of_rates_per_type['total'],\n",
-    "           name=\"Numbre of rates\"),\n",
+    "           name=\"Number of rates\"),\n",
     "    secondary_y=False,\n",
     ")\n",
     "\n",
@@ -326,38 +320,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "debut = time.time()\n",
-    "\n",
-    "filename = 'train_100_binaire_avant_reequilibrage.sav'\n",
-    "pickle.dump(algo, open(filename, 'wb'))\n",
-    "\n",
-    "fin = time.time()\n",
-    "temps = (fin - debut)/60\n",
-    "print(temps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "debut = time.time()\n",
-    "\n",
-    "filename = 'train_100_binaire_avant_reequilibrage.sav'\n",
-    "algo = pickle.load(open(filename, 'rb')) \n",
-    "\n",
-    "fin = time.time()\n",
-    "temps = (fin - debut)/60\n",
-    "print(temps)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -373,38 +335,6 @@
     "debut = time.time()\n",
     "\n",
     "predictions_of_the_grades = algo.test(testset)\n",
-    "\n",
-    "fin = time.time()\n",
-    "temps = (fin - debut)/60\n",
-    "print(temps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "debut = time.time()\n",
-    "\n",
-    "filename = 'prediction_1000_binaire_avant_reequilibrage.sav'\n",
-    "pickle.dump(predictions_of_the_grades, open(filename, 'wb'))\n",
-    "\n",
-    "fin = time.time()\n",
-    "temps = (fin - debut)/60\n",
-    "print(temps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "debut = time.time()\n",
-    "\n",
-    "filename = 'prediction_1000_binaire_avant_reequilibrage.sav'\n",
-    "predictions_of_the_grades = pickle.load(open(filename, 'rb')) \n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -820,7 +750,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Metrics\n",
     "y_true = predictions_of_the_grades['note']\n",
     "y_pred = predictions_of_the_grades['score_avec_seuil']\n",
     "accuracy_recall_precision_f1(y_true, y_pred)"
@@ -948,7 +877,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On récupère la liste des départements \n",
     "nearby_departments = {\n",
     "    '08': ['02', '08', '51', '55', '59'],\n",
     "    '22': ['22', '29', '35', '56'],\n",
@@ -974,7 +902,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On le transforme en dataframe\n",
     "keys = []\n",
     "values = []\n",
     "for key, value_list in nearby_departments.items():\n",
