last version of cf and correlation between types

--- a/notebooks/personalisation_and_diversification_of_recommended_offers/collaborative_filtering_model_based_SVD_binary.ipynb
+++ b/notebooks/personalisation_and_diversification_of_recommended_offers/collaborative_filtering_model_based_SVD_binary.ipynb
@@ -1026,7 +1026,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offers_recommended_to_a_user.to_csv('../offers_recommended_to_a_user.csv', index=False, sep = '\\t') "
+    "offers_recommended_to_a_user.to_csv('offers_recommended_to_a_user.csv', index=False, sep = '\\t') "
    ]
   },
   {
