last version of 3 notebooks of diversification

--- a/notebooks/personalisation_and_diversification_of_recommended_offers/diversification_according_to_the_TF-IDF_of_the_description_of_the_offer.ipynb
+++ b/notebooks/personalisation_and_diversification_of_recommended_offers/diversification_according_to_the_TF-IDF_of_the_description_of_the_offer.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offers_recommended_to_a_user = pd.read_csv('../offers_recommended_to_a_user.csv', sep = '\\t') "
+    "offers_recommended_to_a_user = pd.read_csv('offers_recommended_to_a_user.csv', sep = '\\t') "
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offers_with_the_description = pd.read_sql_query(\"\"\"SELECT id as offer_id, description, type FROM offer \"\"\", connection)\n",
+    "offers_with_the_description = pd.read_sql_query(\"\"\"SELECT id as offer_id, description FROM offer \"\"\", connection)\n",
     "offers_with_the_description"
    ]
   },
@@ -256,6 +256,7 @@
     "    id_offre = row['offer_id']\n",
     "    index = i\n",
     "    tfidf_de_loffre = tfidf_matrix[index]\n",
+    "    \n",
     "\n",
     "    #On met les tf-idf dans un dataframe\n",
     "    df_tfidf = pd.DataFrame(tfidf_de_loffre.T.todense(), index = vectorizer.get_feature_names(), columns=[\"tfidf\"])\n",
@@ -594,13 +595,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -776,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
