--- a/notebooks/personalisation_and_diversification_of_recommended_offers/diversification_according_to_the_types_of_the_offers.ipynb
+++ b/notebooks/personalisation_and_diversification_of_recommended_offers/diversification_according_to_the_types_of_the_offers.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarity_matrix = pd.read_csv('../matrix_type_type_correlation.csv', sep = '\\t') "
+    "similarity_matrix = pd.read_csv('matrix_type_type_correlation.csv', sep = '\\t') "
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offers_recommended_to_a_user = pd.read_csv('../offers_recommended_to_a_user.csv', sep = '\\t') "
+    "offers_recommended_to_a_user = pd.read_csv('offers_recommended_to_a_user.csv', sep = '\\t') "
    ]
   },
   {
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "def add_support_to_the_type(df):\n",
-    "    offers_with_url = pd.read_sql_query(\"\"\" SELECT \"offer\".id as offer_id, url, type, name FROM \"offer\" \"\"\", connection)\n",
+    "    offers_with_url = pd.read_sql_query(\"\"\" SELECT \"offer\".id as offer_id, url, name FROM \"offer\" \"\"\", connection)\n",
     "    df = df.merge(offers_with_url, left_on='offer_id', right_on='offer_id')\n",
     "    for i, row in df.iterrows():\n",
     "        df.loc[i, 'type'] = np.where(row.url is None, row['type'] + '_physique', row['type'] + '_numerique')\n",
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "def add_the_type_and_the_description_of_the_offer(df):\n",
-    "    offers_with_url = pd.read_sql_query(\"\"\" SELECT \"offer\".id as offer_id, url, type, name FROM \"offer\" \"\"\", connection)\n",
+    "    offers_with_url = pd.read_sql_query(\"\"\" SELECT \"offer\".id as offer_id, url, name FROM \"offer\" \"\"\", connection)\n",
     "    df = df.merge(offers_with_url, left_on='offer_id', right_on='offer_id')\n",
     "    return df"
    ]
@@ -531,8 +531,7 @@
     "list_of_similarities = []\n",
     "\n",
     "for i in range(1000):\n",
-    "    K=50\n",
-    "    random_types = sample(group_of_types, K)\n",
+    "    random_types = sample(group_of_types, number_of_exchanges)\n",
     "    dataframe_of_random_types = pd.DataFrame(random_types, columns=['type'])\n",
     "    number_of_offers_per_type = compute_number_of_offers_per_category(dataframe_of_random_types, 'type', 'total')\n",
     "    list_of_similarities.append(compute_similarity_of_the_set(number_of_offers_per_type, similarity_matrix, K)[0])\n",
@@ -556,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.arange(70)\n",
+    "x = np.arange(number_of_exchanges)\n",
     "y = similarity_of_the_set\n",
     "\n",
     "layout = dict(title = \"Similarité après chaque échange d'offre\",\n",
@@ -611,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_offers_per_type_at_each_iteration.dropna(axis=0, how='all', subset = range(0, 40), inplace=True)\n",
+    "number_of_offers_per_type_at_each_iteration.dropna(axis=0, how='all', subset = range(0, number_of_exchanges), inplace=True)\n",
     "number_of_offers_per_type_at_each_iteration"
    ]
   },
